[package]
name = "bioyino-metric"
version = "0.1.0"
authors = ["Sergey Noskov aka Albibek <albibek@gmail.com>"]
description = "Library for handling metrics in bioyino and related projects"
edition = "2018"
license = "MIT"
repository = "https://github.com/Albibek/bioyino-metric"
keywords = ["statsd", "bioyino", "metric", "metrics"]
categories = ["parser-implementations", "network-programming"]

[dependencies]
serde="^1.0"
serde_derive="^1.0"
failure="^0.1"
failure_derive="^0.1"
capnp = "^0.10"
combine="^3.6"
bytes = { version = "^0.4", features = [ "serde" ] }
num-traits="^0.2"

[build-dependencies]
capnpc = "^0.10"
