[package]
name = "bioyino-metric"
version = "0.5.1"
authors = ["Sergey Noskov aka Albibek <albibek@gmail.com>"]
description = "Library for handling metrics in bioyino and related projects"
edition = "2018"
license = "MIT"
repository = "https://github.com/Albibek/bioyino-metric"
keywords = ["statsd", "metrics", "graphite"]
categories = ["parser-implementations", "network-programming"]

[dependencies]
serde= { version = "^1.0", features = ["derive"] }
thiserror="^1.0"
capnp = "^0.14"
combine="^4.3"
bytes = { version = "^1.0", features = [ "serde" ] }
num-traits="^0.2"
lazysort="^0.2"
lexical-core="^0.8"

[build-dependencies]
capnpc = "^0.14"
